--- a/user/index.html
+++ b/user/index.html
@@ -13,38 +13,6 @@
   <link rel="shortcut icon" href="/assets/images/logo.png" type="image/svg+xml">
   <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-  <script type="module">
-  //
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
-  import { getDatabase, set, ref, update } from 'https://www.gstatic.com/firebasejs/10.5.2/firebase-database.js';
-  import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-auth.js";
-  
-  const firebaseConfig = {
-    apiKey: "AIzaSyCvrU2mXPzdc_MvmffICTcFKGTSsCuv11I",
-    authDomain: "authfirebase-552c7.firebaseapp.com",
-    databaseURL: "https://authfirebase-552c7-default-rtdb.firebaseio.com",
-    projectId: "authfirebase-552c7",
-    storageBucket: "authfirebase-552c7.appspot.com",
-    messagingSenderId: "339816014771",
-    appId: "1:339816014771:web:aa0e406a41c651018d21c6"
-  };
-
-  const user = auth.currentUser;
-  onAuthStateChanged(auth, (user) => {
-    if (user) {
-      //
-      //
-      const uid = user.uid;
-      //
-      //
-    } else {
-      //
-      //
-      //
-    }
-  });
-  
-  </script> 
      
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   <!-- 
@@ -53,6 +21,7 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="btn.css">
   <script type="module" src="btn.js"></script>
+  <script type="module" src="/js/session_index.js"></script>
   <!-- 
     - google font link
   -->
