perubahan pada data anggita

--- a/html/form-data-anggota.html
+++ b/html/form-data-anggota.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="../assets/css/form-dashboard.css">
     <link rel="stylesheet" href="../assets/css/chart.css">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
     <link rel="stylesheet" href="/assets/css/table-data-anggota.css">
     <link rel="stylesheet" href="/assets/dist/sweetalert2.css">
     <link rel="stylesheet" href="/assets/dist/sweetalert2.min.css">
@@ -227,7 +228,6 @@
                     class="form-control border-0 shadow-none"
                     placeholder="Search..."
                     aria-label="Search..."
-                    style="width: 400px;"
                   />
                 </div>
               </div>
@@ -240,17 +240,17 @@
                 <!-- User -->
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
                   <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
-                    <div class="avatar avatar-online" >
-                      <img src="../assets/img/avatars/8.png" alt class="w-px-40 h-auto rounded-circle" />
+                    <div class="avatar avatar-online">
+                      <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
                     </div>
                   </a>
-                  <ul class="dropdown-menu dropdown-menu-end" >
+                  <ul class="dropdown-menu dropdown-menu-end">
                     <li>
                       <a class="dropdown-item" href="#">
                         <div class="d-flex">
                           <div class="flex-shrink-0 me-3">
                             <div class="avatar avatar-online">
-                              <img src="../assets/img/avatars/8.png" alt class="w-px-40 h-auto rounded-circle" />
+                              <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
                             </div>
                           </div>
                           <div class="flex-grow-1">
@@ -431,12 +431,15 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="../js/form-data-anggota.js"></script>
    
-
-
+    <script src="../assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="../assets/vendor/libs/popper/popper.js"></script>
+    <script src="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="../assets/vendor/libs/apex-charts/apexcharts.js"></script>
     <script src="../assets/vendor/js/menu.js"></script>
     <!-- endbuild -->
 
-
+    
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
     <script src="/assets/js/data-anggota.js"></script>
