--- a/html/form-tambah-buku.html
+++ b/html/form-tambah-buku.html
@@ -185,7 +185,13 @@
 
             <!-- Forms & Tables -->
             <li class="menu-header small text-uppercase"><span class="menu-header-text">lain lain</span></li>
-            <!-- Forms kirim pesan -->
+            <!-- Forms logout -->
+            <li class="menu-item">
+              <a href="#" class="menu-link" id="logout-link">
+                <i class="menu-icon tf-icons bx bx-log-out"></i>
+                <div data-i18n="Authentications" >Log out</div>
+              </a>
+            </li>
           </ul>
         </aside>
         <!-- Layout container -->
