--- a/user/user.html
+++ b/user/user.html
@@ -456,20 +456,19 @@
 
           </ul>
 
-          <ul class="movies-list">
-
-            <li>
-              <div class="movie-card">
+          <ul class="movies-list" >
+            <li >
+              <div class="movie-card" >
 
                 <div >
                   <figure class="card-banner">
-                    <img src="./assets/images/movie-1.png" alt="Sonic the Hedgehog 2 movie poster">
+                    <img src="" alt="Movie Banner" id="gambarurl">
                   </figure>
                 </div>
 
                 <div class="title-wrapper">
                   <a href="./movie-details.html">
-                    <h3 class="card-title">Sonic the Hedgehog 2 </h3>
+                    <h3 class="card-title"></h3>
                   </a>
 
                   <div class="rating">
@@ -482,7 +481,7 @@
                 </div>
 
                 <div class="card-meta">
-                  <div class="badge badge-outline">Horor</div>
+                  <div class="badge badge-outline"> </div>
                   
                  <div class="likedislike">
                 <div class="like">
@@ -499,9 +498,6 @@
               </div>
               </div>
             </li>
-
-           
-
           </ul>
 
         </div>
@@ -773,6 +769,7 @@
   <script src="./assets/js/script.js"></script>
   <script type="module" src="/js/login.js"></script>
   <script type="module" src="/js/register.js"></script>
+ 
   
   <!--  
     - ionicon link
