--- a/html/form-tambah-buku.html
+++ b/html/form-tambah-buku.html
@@ -109,13 +109,6 @@
                 </li>
               </ul>
 
-              <ul class="menu-sub">
-                <li class="menu-item ">
-                  <a href="form-tambah-buku.html" class="menu-link">
-                    <div data-i18n="Without menu">Tambah kategori</div>
-                  </a>
-                </li>
-              </ul>
             </li>
             <li class="menu-item ">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
@@ -364,30 +357,26 @@
                       <!-- /Account -->
                     </div>
                     <div class="card">
-                      <h5 class="card-header">Hapus Buku</h5>
+                      <h5 class="card-header">Tambah Kategori Buku</h5>
                       <div class="card-body">
                         <div class="mb-3 col-12 mb-0">
                           <div class="alert alert-warning">
-                            <h6 class="alert-heading fw-bold mb-1">Apakah anda yakin ingin menghapus buku?</h6>
-                            <p class="mb-0">Once you delete your account, there is no going back. Please be certain.</p>
+                            <h6 class="alert-heading fw-bold mb-1">Apakah anda ingin Menambahkan Kategori Buku ?</h6>
                           </div>
                         </div>
-                        <form id="formAccountDeactivation" onsubmit="return false">
-                          <div class="form-check mb-3">
-                            <input
-                              class="form-check-input"
-                              type="checkbox"
-                              name="accountActivation"
-                              id="accountActivation"
-                            />
-                            <label class="form-check-label" for="accountActivation"
-                              >I confirm my account deactivation</label
-                            >
-                          </div>
-                          <button type="submit" class="btn btn-danger deactivate-account">Deactivate Account</button>
-                        </form>
+                        <div class="mb-3 col-md-6 d-flex align-items-center">
+                          <input
+                            class="form-control"
+                            type="text"
+                            id="kategori_buku"
+                            name="tambah_kategori_buku"
+                            placeholder="Tambah kategori buku"
+                          />
+                          <button type="submit" id="saveButton" class="btn btn-primary ms-2">Tambah</button>
+                        </div>
                       </div>
                     </div>
+                    
                   </div>
                 </div>
               </div>
@@ -454,6 +443,7 @@
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
 
+    <script src="/assets/vendor/js/bootstrap.js"></script>
     <!-- Page JS -->
     <script src="../assets/js/dashboards-analytics.js"></script>
     <script type="module" src="/js/form-tambah-buku-config.js"></script>
