--- a/html/form-accept-account.html
+++ b/html/form-accept-account.html
@@ -341,7 +341,8 @@
                                   Lemon drops chocolate cake gummies carrot cake chupa chups muffin topping. Sesame snaps icing
                                   marzipan gummi bears macaroon dragée danish caramels powder. Bear claw dragée pastry topping
                                   soufflé. Wafer gummi bears marshmallow pastry pie.
-                                  <i class='bx bx-check-square' style="font-size: 30px;"></i>
+                                  <i class='bx bx-message-square-x' style="font-size: 30px; float: right;"></i>
+                                  <i class='bx bx-check-square' style="font-size: 30px; float: right;"></i>
                                   <!-- -->
                                 </div>
                               </div>
