refactor table in accept-account

--- a/html/form-data-buku.html
+++ b/html/form-data-buku.html
@@ -312,10 +312,10 @@
                 <table class="table table-bordered">
                   <thead>
                     <tr>
-                      <th>Title</th>
-                      <th>Category</th>
+                      <th>Judul Buku</th>
+                      <th>Kategori</th>
                       <th>Download</th>
-                      <th>Description</th>
+                      <th>Deskripsi</th>
                       <th>Lain-Lain</th>
                     </tr>
                   </thead>
