feat setting akun

--- a/html/form-setting-akun.html
+++ b/html/form-setting-akun.html
@@ -309,7 +309,7 @@
                       <div class="card-body">
                         <div class="d-flex align-items-start align-items-sm-center gap-4">
                           <img
-                            src="../assets/img/avatars/1.png"
+                            src="../assets/img/avatars/user.jpg"
                             alt="user-avatar"
                             class="d-block rounded"
                             height="100"
@@ -348,21 +348,29 @@
                                 type="text"
                                 id="username"
                                 name="username"
-                                value="username"
+                                placeholder="username"
                                 autofocus
                               />
                             </div>
                             <div class="mb-3 col-md-6">
-                              <label for="firstName" class="form-label">Username</label>
+                              <label for="state" class="form-label">Password Lama</label>
+                              <input class="form-control" type="password" id="password" name="state" placeholder="************" />
+                            </div>
+                            <div class="mb-3 col-md-6">
+                              <label for="firstName" class="form-label">email</label>
                               <input
                                 class="form-control"
                                 type="text"
-                                id="username"
-                                name="username"
-                                value="username"
+                                id="email"
+                                name="email"
+                                placeholder="nama@gmail.com"
                                 autofocus
                               />
                             </div>
+                            <div class="mb-3 col-md-6">
+                              <label for="state" class="form-label">Password Baru</label>
+                              <input class="form-control" type="password" id="password" name="state" placeholder="************" />
+                            </div>  
                            
                           <div class="mt-2">
                             <button type="submit" class="btn btn-primary me-2">Save changes</button>
