--- a/html/form-setting-akun.html
+++ b/html/form-setting-akun.html
@@ -248,7 +248,7 @@
                           </div>
                         </div>
                         <div class="flex-grow-1">
-                          <span class="fw-semibold d-block">John Doe</span>
+                          <span class="fw-semibold d-block" id="nama_admin"></span>
                           <small class="text-muted">Admin</small>
                         </div>
                       </div>
