--- a/html/form-tambah-akun-admin.html
+++ b/html/form-tambah-akun-admin.html
@@ -237,7 +237,7 @@
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
                   <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                     <div class="avatar avatar-online">
-                      <img src="../assets/img/avatars/8.png" alt class="w-px-40 h-auto rounded-circle" />
+                      <img src="../assets/img/avatars/user.jpg" alt class="w-px-40 h-auto rounded-circle" />
                     </div>
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
@@ -246,11 +246,11 @@
                         <div class="d-flex">
                           <div class="flex-shrink-0 me-3">
                             <div class="avatar avatar-online">
-                              <img src="../assets/img/avatars/8.png" alt class="w-px-40 h-auto rounded-circle" />
+                              <img src="../assets/img/avatars/user.jpg" alt class="w-px-40 h-auto rounded-circle" />
                             </div>
                           </div>
                           <div class="flex-grow-1">
-                            <span class="fw-semibold d-block">John Doe</span>
+                            <span class="fw-semibold d-block" id="name">guntur</span>
                             <small class="text-muted">Admin</small>
                           </div>
                         </div>
@@ -284,7 +284,7 @@
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="auth-login-basic.html">
+                      <a class="dropdown-item" href="login.html">
                         <i class="bx bx-power-off me-2"></i>
                         <span class="align-middle">Log Out</span>
                       </a>
@@ -323,7 +323,7 @@
                       <div class="card-body">
                         <div class="d-flex align-items-start align-items-sm-center gap-4">
                           <img
-                            src="../assets/img/avatars/8.png"
+                            src="../assets/img/avatars/user.jpg"
                             alt="user-avatar"
                             class="d-block rounded"
                             height="100"
@@ -356,12 +356,12 @@
                         <form id="formAccountSettings" method="POST" onsubmit="return false">
                           <div class="row">
                             <div class="mb-3 col-md-6">
-                              <label for="firstName" class="form-label">username</label>
+                              <label for="firstName" class="form-label">name</label>
                               <input
                                 class="form-control"
                                 type="text"
-                                id="username"
-                                name="username"
+                                id="name2"
+                                name="name"
                                 placeholder="username"
                                 autofocus
                               />
@@ -371,18 +371,18 @@
                               <input
                                 class="form-control"
                                 type="text"
-                                id="email"
+                                id="email2"
                                 name="email"
                                 placeholder="tono@gmail.com"
                               />
                             </div>
                             <div class="mb-3 col-md-6">
                               <label for="state" class="form-label">Password</label>
-                              <input class="form-control" type="password" id="password" name="state" placeholder="************" />
+                              <input class="form-control" type="password" id="password2" name="state" placeholder="************" />
                             </div>
                           </div>
                           <div class="mt-2">
-                            <button type="submit" id="btn_save" class="btn btn-primary me-2">Save </button>
+                            <button type="submit" id="btn_save2" class="btn btn-primary me-2">Save </button>
                             <button type="reset" class="btn btn-outline-secondary">Cancel</button>
                           </div>
                         </form>
@@ -456,7 +456,7 @@
     </div>
     <!-- / Layout wrapper -->
 
-    
+    <script src="/js/login.js"></script>
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
@@ -485,6 +485,7 @@
 
     <!-- Page JS -->
     <script src="../assets/js/dashboards-analytics.js"></script>
+    <script src="/assets/vendor/js/bootstrap.js"></script>
 
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
