--- a/form-dashboard.html
+++ b/form-dashboard.html
@@ -164,7 +164,7 @@
             <li class="menu-header small text-uppercase"><span class="menu-header-text">lain lain</span></li>
             <!-- Forms -->
             <li class="menu-item">
-              <a href="login.html" class="menu-link" id="logout-link">
+              <a href="" class="menu-link" id="logout-link">
                 <i class="menu-icon tf-icons bx bx-log-out"></i>
                 <div data-i18n="Authentications" >Log out</div>
               </a>
@@ -251,9 +251,9 @@
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="login.html" >
+                      <a href="#" class="dropdown-item"  id="logout-link2">
                         <i class="bx bx-power-off me-2"></i>
-                        <span class="align-middle">Log Out</span>
+                        <span class="align-middle" >Log Out</span>
                       </a>
                     </li>
                   </ul>
@@ -537,6 +537,7 @@
     <!-- Place this tag in your head or just before your close body tag. -->
     <script src="../assets/js/form-data-anggota.js"></script>
     <script type="module" src="/js/logout.js"></script>
+    <script type="module" src="js/logout-dropdown.js"></script>
 
 
     <!--js untuk pop up swal fire-->
