--- a/form-data-buku.html
+++ b/form-data-buku.html
@@ -262,7 +262,7 @@
           <div class="content-wrapper">
 
             <div class="container-xxl flex-grow-1 container-p-y">
-            <div class="card">
+            <div class="card" style="max-height: 645px; height: 645px; overflow-y: auto;">
             <h5 class="card-header">Data Buku</h5>
             <div class="card-body">
               <div class="table-responsive text-nowrap">
