--- a/form-tambah-buku.html
+++ b/form-tambah-buku.html
@@ -336,11 +336,12 @@
                               </div>
                             </div>
                             <div class="mb-3 col-md-6">
-                              <label for="kategori" class="form-label">kategori</label>
+                              <label  for="kategori" class="form-label">kategori</label>
                               <select id="kategori" style="cursor: pointer;" class="select2 form-select">
                                 <option value="" id="pilih_kategori
                                 ">Pilih Kategori</option>
                                 <!-- Opsi kategori akan diperbarui secara otomatis di sini -->
+                                
                               </select>
                             </div>                            
                             <div class="mb-3 col-md-6" id="uploadedFile">
@@ -371,6 +372,7 @@
                             id="kategori_buku1"
                             name="tambah_kategori_buku"
                             placeholder="Tambah / hapus kategori buku"
+                            type="text"
                           />
                           <button type="button" id="saveButton_1" class="btn btn-primary ms-2">Tambah</button>
                           <button type="button" id="delleteButton_1" class="btn btn-primary ms-2">Hapus </button>
