--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <link rel="stylesheet" href="/assets/dist/sweetalert2.css">
     <link rel="stylesheet" href="/assets/dist/sweetalert2.min.css">
 
+    <link rel="shortcut icon" href="/assets/img/avatars/judul_gambar.png" type="image/x-icon">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -149,6 +151,8 @@
     <!-- endbuild -->
 
     <!-- Vendors JS -->
+
+    
 
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
