--- a/lupa-password.html
+++ b/lupa-password.html
@@ -20,6 +20,7 @@
     <meta name="description" content="" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+    <link rel="shortcut icon" href="/assets/img/avatars/judul_gambar.png" type="image/x-icon">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
