--- a/register.html
+++ b/register.html
@@ -42,6 +42,8 @@
       rel="stylesheet"
     />
 
+    <link rel="shortcut icon" href="/assets/img/avatars/judul_gambar.png" type="image/x-icon">
+
     <!-- Icons. Uncomment required icon fonts -->
     <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css" />
 
