script di masukan untuk logout di setiap form

--- a/form-data-anggota.html
+++ b/form-data-anggota.html
@@ -361,7 +361,8 @@
     <script src="/assets/dist/sweetalert2.min.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="/js/bootstrap.js"></script>
-  
+    <script type="module" src="/js/logout.js"></script>
+    <script type="module" src="js/logout-dropdown.js"></script>
     <!-- Page JS -->
 
     <script>
