--- a/form-data-buku.html
+++ b/form-data-buku.html
@@ -370,7 +370,7 @@ document.addEventListener('DOMContentLoaded', function () {
     <script src="/assets/dist/sweetalert2.min.js"></script>
     <script src="/assets/vendor/js/bootstrap.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    
+    <script type="module" src="/js/logout.js"></script>
     <!-- Page JS -->
     
     <script src="../assets/js/dashboards-analytics.js"></script>
