--- a/form-data-peminjaman.html
+++ b/form-data-peminjaman.html
@@ -449,6 +449,8 @@ document.addEventListener('DOMContentLoaded', function () {
 });
 </script>
 
+<script type="module" src="/js/logout.js"></script>
+    <script type="module" src="js/logout-dropdown.js"></script>
     
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <!-- Main JS -->
