--- a/form-tambah-akun-admin.html
+++ b/form-tambah-akun-admin.html
@@ -385,7 +385,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script type="module" src="/js/form-tambah-akun-admin.js"></script>
-
+    <script type="module" src="/js/logout.js"></script>
+    <script type="module" src="js/logout-dropdown.js"></script>
     <script src="../assets/vendor/js/menu.js"></script>
     <!-- endbuild -->
 
