--- a/form-tambah-akun-anggota.html
+++ b/form-tambah-akun-anggota.html
@@ -356,6 +356,8 @@
     <script src="../assets/vendor/js/menu.js"></script>
     <!-- endbuild -->
 
+    <script type="module" src="/js/logout.js"></script>
+    <script type="module" src="js/logout-dropdown.js"></script>
     <!-- Vendors JS -->
     <script src="../assets/vendor/libs/apex-charts/apexcharts.js"></script>
 
