--- a/form-tambah-buku.html
+++ b/form-tambah-buku.html
@@ -388,6 +388,8 @@ document.addEventListener('DOMContentLoaded', function () {
     <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.5.0/
     firebase-firestore.js"></script>
+    <script type="module" src="/js/logout.js"></script>
+    <script type="module" src="js/logout-dropdown.js"></script>
     
     <!-- build:js assets/vendor/js/core.js -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
